force-app/main/default/objects/Account/fields/a4a_Country__c.field-meta.xml
<CustomField>
    <fullName>a4a_Country__c</fullName>
    <formula>BLANKVALUE(UPPER(BillingCountry),&quot;Other&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4a Country</label>
    <type>Text</type>
</CustomField>