force-app/main/default/objects/Account/fields/a4a_Manual_Forecast__c.field-meta.xml
<CustomField>
    <fullName>a4a_Manual_Forecast__c</fullName>
    <formula>False</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4a Manual Forecast</label>
    <type>Checkbox</type>
</CustomField>