force-app/main/default/objects/Account/fields/a4a_Project_Owner__c.field-meta.xml
<CustomField>
    <fullName>a4a_Project_Owner__c</fullName>
    <description>To be used for Measure Report (custom button)</description>
    <formula>SF_Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>To be used for Measure Report (custom button)</inlineHelpText>
    <label>a4a Project Owner</label>
    <type>Text</type>
</CustomField>