force-app/main/default/objects/Account/fields/a4a_Region__c.field-meta.xml
<CustomField>
    <fullName>a4a_Region__c</fullName>
    <formula>BLANKVALUE(TEXT(uB_Office__c),&quot;Other&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4a Region</label>
    <type>Text</type>
</CustomField>