force-app/main/default/objects/Account/fields/a4a_Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>a4a_Unit_Type__c</fullName>
    <formula>&quot;GC&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4a Unit Type</label>
    <type>Text</type>
</CustomField>