force-app/main/default/objects/Account/fields/a4x_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>a4x_Account_Owner__c</fullName>
    <formula>Owner.FirstName + &apos; &apos; + Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4x Account Owner</label>
    <type>Text</type>
</CustomField>