force-app/main/default/objects/Account/fields/a4x_Channel_Manager__c.field-meta.xml
<CustomField>
    <fullName>a4x_Channel_Manager__c</fullName>
    <formula>New_Channel_Manager__r.FirstName&amp;&quot; &quot;&amp;New_Channel_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4x Channel Manager</label>
    <type>Text</type>
</CustomField>