force-app/main/default/objects/Account/fields/a4x_FAE_Name__c.field-meta.xml
<CustomField>
    <fullName>a4x_FAE_Name__c</fullName>
    <formula>FAE__r.FirstName&amp;&quot; &quot;&amp;FAE__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4x FAE Name</label>
    <type>Text</type>
</CustomField>