force-app/main/default/objects/Account/fields/Abacus_Payterms__c.field-meta.xml
<CustomField>
    <fullName>Abacus_Payterms__c</fullName>
    <inlineHelpText>(From Abacus) Payment terms</inlineHelpText>
    <label>Abacus Payterms</label>
    <length>30</length>
    <type>Text</type>
</CustomField>