force-app/main/default/objects/Account/fields/Abacus_Region_Code__c.field-meta.xml
<CustomField>
    <fullName>Abacus_Region_Code__c</fullName>
    <inlineHelpText>(From Abacus) Indicates the region that handles the order. Number that is translated to readable region with formula (Order Handling Region)</inlineHelpText>
    <label>Order Handling Region Code</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>