force-app/main/default/objects/Account/fields/Account_Name_local_language__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_local_language__c</fullName>
    <description>Account written in local language (eg Chinese, Korean, etc)</description>
    <label>Account Name (local language)</label>
    <length>60</length>
    <type>Text</type>
</CustomField>