force-app/main/default/objects/Account/fields/Account_Prediction_AI__c.field-meta.xml
<CustomField>
    <fullName>Account_Prediction_AI__c</fullName>
    <label>Account Prediction AI</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>