force-app/main/default/objects/Account/fields/Address_Match__c.field-meta.xml
<CustomField>
    <fullName>Address_Match__c</fullName>
    <formula>if (  Customer_No__c  &lt;&gt; &quot;&quot; ,
if( ((BillingPostalCode = ShippingPostalCode) &amp;&amp; ( BillingCity  =  ShippingCity )), &quot;yes&quot;, &quot;no&quot;),
&quot;n/a&quot;)</formula>
    <inlineHelpText>checks if ZIP and City are the same</inlineHelpText>
    <label>Address Match</label>
    <type>Text</type>
</CustomField>