force-app/main/default/objects/Account/fields/AMPrioCombo__c.field-meta.xml
<CustomField>
    <fullName>AMPrioCombo__c</fullName>
    <formula>TEXT(Priority__c) &amp; IF( Focus_Account__c, &apos;F&apos;, &apos;&apos;) &amp; IF(  Emerging_Account__c, &apos;E&apos;, &apos;&apos;)</formula>
    <label>AM Priority Combo</label>
    <type>Text</type>
</CustomField>