force-app/main/default/objects/Account/fields/Annual_volume__c.field-meta.xml
<CustomField>
    <fullName>Annual_volume__c</fullName>
    <description>Annual volume that is potentially available.</description>
    <inlineHelpText>Annual volume that is potentially available.</inlineHelpText>
    <label>Annual Volume</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>