force-app/main/default/objects/Account/fields/Billing_Country_Length__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country_Length__c</fullName>
    <description>Used to check whether Visiting Country is correctly entered.</description>
    <formula>LEN( BillingCountry )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Country Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>