force-app/main/default/objects/Account/fields/BillingCityFormula__c.field-meta.xml
<CustomField>
    <fullName>BillingCityFormula__c</fullName>
    <formula>BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BillingCityFormula</label>
    <type>Text</type>
</CustomField>