force-app/main/default/objects/Account/fields/BillingCountryFormula__c.field-meta.xml
<CustomField>
    <fullName>BillingCountryFormula__c</fullName>
    <formula>BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BillingCountryFormula</label>
    <type>Text</type>
</CustomField>