force-app/main/default/objects/Account/fields/Billings_Prev_Yr__c.field-meta.xml
<CustomField>
    <fullName>Billings_Prev_Yr__c</fullName>
    <description>Field definition needs to be updated once a year.</description>
    <inlineHelpText>Billing previous year in local currency</inlineHelpText>
    <label>Billings Prev Yr</label>
    <summarizedField>Billings__c.Total_Value__c</summarizedField>
    <summaryFilterItems>
        <field>Billings__c.Invoice_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2020</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Billings__c.Invoice_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2020</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Billings__c.Order_Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </summaryFilterItems>
    <summaryForeignKey>Billings__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>