force-app/main/default/objects/Account/fields/Billings_YTD__c.field-meta.xml
<CustomField>
    <fullName>Billings_YTD__c</fullName>
    <inlineHelpText>Billings year-to-date, in local currency</inlineHelpText>
    <label>Billings YTD</label>
    <summarizedField>Billings__c.Total_Value__c</summarizedField>
    <summaryFilterItems>
        <field>Billings__c.Invoice_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2021</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Billings__c.Order_Status__c</field>
        <operation>equals</operation>
        <value>Closed</value>
    </summaryFilterItems>
    <summaryForeignKey>Billings__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>