force-app/main/default/objects/Account/fields/Bookings_YTD__c.field-meta.xml
<CustomField>
    <fullName>Bookings_YTD__c</fullName>
    <inlineHelpText>Bookings year to date in local currency</inlineHelpText>
    <label>Bookings YTD</label>
    <summarizedField>Billings__c.Total_Value__c</summarizedField>
    <summaryFilterItems>
        <field>Billings__c.Order_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2021</value>
    </summaryFilterItems>
    <summaryForeignKey>Billings__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>