force-app/main/default/objects/Account/fields/CB_History__c.field-meta.xml
<CustomField>
    <fullName>CB_History__c</fullName>
    <description>TWiki link (VPN connection required) to connectBlue activities (mails, quotations and so on)</description>
    <inlineHelpText>TWiki link (VPN connection required) to connectBlue activities (mails, quotations and so on)</inlineHelpText>
    <label>CB History</label>
    <type>Url</type>
</CustomField>