force-app/main/default/objects/Account/fields/CB_Pyramid_ID__c.field-meta.xml
<CustomField>
    <fullName>CB_Pyramid_ID__c</fullName>
    <inlineHelpText>ID of connectBlue ERP system &quot;Pyramid&quot;</inlineHelpText>
    <label>CB Pyramid ID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>