force-app/main/default/objects/Account/fields/Channel_Manager__c.field-meta.xml
<CustomField>
    <fullName>Channel_Manager__c</fullName>
    <inlineHelpText>If the Account is owned by a distribution partner, this field indicates the channel manager. Else it is the same as the Owner. Copied from User settings.</inlineHelpText>
    <label>Old Channel Manager</label>
    <length>30</length>
    <type>Text</type>
</CustomField>