force-app/main/default/objects/Account/fields/Channel_Manager_Not_Equal_To_Owner__c.field-meta.xml
<CustomField>
    <fullName>Channel_Manager_Not_Equal_To_Owner__c</fullName>
    <description>Ticked if Channel Manager is different from Account Owner</description>
    <formula>AND(
  Owner.Id &lt;&gt; New_Channel_Manager__r.Id,
  NOT(ISBLANK(New_Channel_Manager__c))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Ticked if Channel Manager is different from Account Owner</inlineHelpText>
    <label>Channel Manager Not Equal To Owner</label>
    <type>Checkbox</type>
</CustomField>