force-app/main/default/objects/Account/fields/Cluster_Account__c.field-meta.xml
<CustomField>
    <fullName>Cluster_Account__c</fullName>
    <inlineHelpText>used in the Cluster Account APEX Class</inlineHelpText>
    <label>Cluster Account</label>
    <length>80</length>
    <type>Text</type>
</CustomField>