force-app/main/default/objects/Account/fields/Consolidation_Account__c.field-meta.xml
<CustomField>
    <fullName>Consolidation_Account__c</fullName>
    <description>Orig: IF(LEN( Cluster_Account__c) =0, Name , Cluster_Account__c )</description>
    <formula>IF(ISBLANK(ParentId),Name,Parent.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Parent Account, or itself if no Parent Account</inlineHelpText>
    <label>Consolidation Account</label>
    <type>Text</type>
</CustomField>