force-app/main/default/objects/Account/fields/Contract_Available__c.field-meta.xml
<CustomField>
    <fullName>Contract_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The field created to update if there is any active contract.</description>
    <inlineHelpText>Checked if there is an active contract.</inlineHelpText>
    <label>Contract Available</label>
    <type>Checkbox</type>
</CustomField>