force-app/main/default/objects/Account/fields/Copy_Address_from_Abacus__c.field-meta.xml
<CustomField>
    <fullName>Copy_Address_from_Abacus__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Visiting address should be equal to address maintained in Abacus (ERP system). Recommendation is to set the flag as soon as the Account is linked to Abacus</inlineHelpText>
    <label>Copy Address from Abacus</label>
    <type>Checkbox</type>
</CustomField>