force-app/main/default/objects/Account/fields/Credit_Line_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Line_Effective_Date__c</fullName>
    <inlineHelpText>(From Abacus) Date when Insurance became active for the first time.</inlineHelpText>
    <label>Credit Line open Date</label>
    <type>Date</type>
</CustomField>