force-app/main/default/objects/Account/fields/Credit_Line_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Line_End_Date__c</fullName>
    <inlineHelpText>(From Abacus) Date of termination.</inlineHelpText>
    <label>Credit Line End Date</label>
    <type>Date</type>
</CustomField>