force-app/main/default/objects/Account/fields/Credit_Line_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Credit_Line_Insurance__c</fullName>
    <inlineHelpText>(From Abacus) Credit line in currency of Insurance.</inlineHelpText>
    <label>Credit Line Insurance</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>