force-app/main/default/objects/Account/fields/Credit_Line_Prolongation__c.field-meta.xml
<CustomField>
    <fullName>Credit_Line_Prolongation__c</fullName>
    <inlineHelpText>(From Abacus) Date of last prolongation.</inlineHelpText>
    <label>Credit Line last modification</label>
    <type>Date</type>
</CustomField>