force-app/main/default/objects/Account/fields/Credit_Line_u_blox__c.field-meta.xml
<CustomField>
    <fullName>Credit_Line_u_blox__c</fullName>
    <inlineHelpText>(From Abacus) Credit Line in Account currency, defined by u-blox</inlineHelpText>
    <label>Credit Line u-blox</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>