force-app/main/default/objects/Account/fields/Customer_No__c.field-meta.xml
<CustomField>
    <fullName>Customer_No__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>(From Abacus) Abacus customer number</inlineHelpText>
    <label>Customer No</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>