force-app/main/default/objects/Account/fields/Delivery_Terms__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Terms__c</fullName>
    <description>(From Abacus)</description>
    <inlineHelpText>(From Abacus)</inlineHelpText>
    <label>Delivery Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DAP</fullName>
            </value>
            <value>
                <fullName>DAP TEST</fullName>
            </value>
            <value>
                <fullName>DDP</fullName>
            </value>
            <value>
                <fullName>DDU</fullName>
            </value>
            <value>
                <fullName>EXW</fullName>
            </value>
            <value>
                <fullName>EXW Althofen (AT)</fullName>
            </value>
            <value>
                <fullName>EXW Thalwil (CH)</fullName>
            </value>
            <value>
                <fullName>Ex Works Reston, VA (USA)</fullName>
            </value>
            <value>
                <fullName>FCA Amkor ATP3 Binan PH</fullName>
            </value>
            <value>
                <fullName>FCA Flextronics Althofen AT</fullName>
            </value>
            <value>
                <fullName>Lieferkondition</fullName>
            </value>
            <value>
                <fullName>FCA Thalwil (CH)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>