force-app/main/default/objects/Account/fields/Design_Partner_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Design_Partner_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Design Partner Agreement</label>
    <type>Checkbox</type>
</CustomField>