force-app/main/default/objects/Account/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <defaultValue>if((  $User.Distributor_Name__c  &lt;&gt; &quot;&quot;) &amp;&amp; ( $User.Distributor_Name__c &lt;&gt; &quot;Internal&quot;), $User.Distributor_Name__c, &quot;&quot;)</defaultValue>
    <inlineHelpText>Name of distributor who handles account. Add &quot;Direct&quot; if handled by u-blox.</inlineHelpText>
    <label>Distributor</label>
    <length>30</length>
    <type>Text</type>
</CustomField>