force-app/main/default/objects/Account/fields/Distributor_Name__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Name__c</fullName>
    <description>See Worksflow for RMA.</description>
    <inlineHelpText>Name of distributor will be copied to the field with the same name of all RMAs connected to this account. The sharing rule will ensure access to these RMAs</inlineHelpText>
    <label>Distributor Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>