force-app/main/default/objects/Account/fields/Distributor_Portal__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Distributor has access to the distributor portal.</inlineHelpText>
    <label>Distributor Portal</label>
    <type>Checkbox</type>
</CustomField>