force-app/main/default/objects/Account/fields/Dominant_Style__c.field-meta.xml
<CustomField>
    <fullName>Dominant_Style__c</fullName>
    <label>Dominant Style</label>
    <length>255</length>
    <type>Text</type>
</CustomField>