force-app/main/default/objects/Account/fields/Email_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Email_Account_Owner__c</fullName>
    <inlineHelpText>Email address of the Account owner. Copied from User settings.</inlineHelpText>
    <label>Email Account Owner</label>
    <type>Email</type>
</CustomField>