force-app/main/default/objects/Account/fields/Email_Channel_Manager__c.field-meta.xml
<CustomField>
    <fullName>Email_Channel_Manager__c</fullName>
    <inlineHelpText>Email address of the channel manager. Copied from User settings.</inlineHelpText>
    <label>Email Channel Manager</label>
    <type>Email</type>
</CustomField>