force-app/main/default/objects/Account/fields/Emerging_Account__c.field-meta.xml
<CustomField>
    <fullName>Emerging_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the Account is an emerging account, independently of Priority.</description>
    <inlineHelpText>Checked if the Account is an emerging account, independently of Priority.</inlineHelpText>
    <label>Emerging Account</label>
    <type>Checkbox</type>
</CustomField>