force-app/main/default/objects/Account/fields/Equity_Assets_under_Management__c.field-meta.xml
<CustomField>
    <fullName>Equity_Assets_under_Management__c</fullName>
    <label>Equity Assets under Management</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>