force-app/main/default/objects/Account/fields/Equity_Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Equity_Portfolio__c</fullName>
    <label>Equity % Portfolio</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>