force-app/main/default/objects/Account/fields/EUS_Available__c.field-meta.xml
<CustomField>
    <fullName>EUS_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When signed document is received and contract is active, you can now quote ECCN products to customer</description>
    <inlineHelpText>Auto ticked when signed EUS document is received (stored under Contracts) and contract is active, ready to quote</inlineHelpText>
    <label>EUS Available</label>
    <type>Checkbox</type>
</CustomField>