force-app/main/default/objects/Account/fields/Exhibition__c.field-meta.xml
<CustomField>
    <fullName>Exhibition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exhibition</label>
    <referenceTo>Exhibition__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>