force-app/main/default/objects/Account/fields/FAE__c.field-meta.xml
<CustomField>
    <fullName>FAE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>u-blox FAE responsible for this Account</description>
    <inlineHelpText>u-blox FAE responsible for this Account</inlineHelpText>
    <label>FAE</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.UserType</field>
            <operation>equals</operation>
            <value>Standard,PowerPartner</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>