force-app/main/default/objects/Account/fields/Fastrax_Activity__c.field-meta.xml
<CustomField>
    <fullName>Fastrax_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Sales activity of Fastrax in the past.</inlineHelpText>
    <label>Fastrax Activity</label>
    <type>Checkbox</type>
</CustomField>