force-app/main/default/objects/Account/fields/Finance_Type__c.field-meta.xml
<CustomField>
    <fullName>Finance_Type__c</fullName>
    <label>Finance Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Audit firm</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Fund</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Law firm</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Reserach</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>