force-app/main/default/objects/Account/fields/Focus_Account__c.field-meta.xml
<CustomField>
    <fullName>Focus_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Focus account of the account owner, editable only for the Account Owner or Channel_Manager.</description>
    <inlineHelpText>Focus account of the account owner, editable only for the Account Owner or Channel_Manager.</inlineHelpText>
    <label>Focus Account</label>
    <type>Checkbox</type>
</CustomField>