force-app/main/default/objects/Account/fields/Follow_Orders__c.field-meta.xml
<CustomField>
    <fullName>Follow_Orders__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, new post is added in Chatter Feed on every new Order. Follow this account if you want to be notified.</description>
    <inlineHelpText>If checked, new post is added in Chatter Feed on every new Order. Follow this account if you want to be notified.</inlineHelpText>
    <label>Follow Orders</label>
    <type>Checkbox</type>
</CustomField>