force-app/main/default/objects/Account/fields/FTX_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>FTX_Company_ID__c</fullName>
    <inlineHelpText>ID used in Fastrax&apos; CRM &amp; ERP</inlineHelpText>
    <label>FTX Company ID</label>
    <length>9</length>
    <type>Text</type>
</CustomField>