force-app/main/default/objects/Account/fields/GD_Total_Sales_Prev_Yr__c.field-meta.xml
<CustomField>
    <fullName>GD_Total_Sales_Prev_Yr__c</fullName>
    <inlineHelpText>Previous year u-blox Total Sales from GD in local currency.</inlineHelpText>
    <label>GD Billings Prev Yr</label>
    <summarizedField>GD_POS_Order__c.u_blox_Total_Sales__c</summarizedField>
    <summaryFilterItems>
        <field>GD_POS_Order__c.Invoice_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2021</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>GD_POS_Order__c.Invoice_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>12/31/2021</value>
    </summaryFilterItems>
    <summaryForeignKey>GD_POS_Order__c.Project_Owner_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>