force-app/main/default/objects/Account/fields/Inactive_From__c.field-meta.xml
<CustomField>
    <fullName>Inactive_From__c</fullName>
    <description>(From Abacus) Datum since when the account is inactive in Abacus</description>
    <inlineHelpText>(From Abacus) Datum since when the account is inactive in Abacus</inlineHelpText>
    <label>Inactive From</label>
    <type>Date</type>
</CustomField>