force-app/main/default/objects/Account/fields/Indirect_Shareholder__c.field-meta.xml
<CustomField>
    <fullName>Indirect_Shareholder__c</fullName>
    <label>Indirect Shareholder</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>non-voting</fullName>
                <default>true</default>
                <label>non-voting</label>
            </value>
            <value>
                <fullName>voting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>