force-app/main/default/objects/Account/fields/Insurance_Currency__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Currency__c</fullName>
    <inlineHelpText>(From Abacus) ISO code of insurance currency</inlineHelpText>
    <label>Insurance Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>