force-app/main/default/objects/Account/fields/Insurance_Number__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Number__c</fullName>
    <inlineHelpText>(From Abacus) Credit Insurance Number</inlineHelpText>
    <label>Insurance Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>