force-app/main/default/objects/Account/fields/Insurance_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Remarks__c</fullName>
    <inlineHelpText>(From Abacus)</inlineHelpText>
    <label>Insurance Remarks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>