force-app/main/default/objects/Account/fields/Investment_Center__c.field-meta.xml
<CustomField>
    <fullName>Investment_Center__c</fullName>
    <label>Investment Center</label>
    <length>255</length>
    <type>Text</type>
</CustomField>