force-app/main/default/objects/Account/fields/IsMyAccount__c.field-meta.xml
<CustomField>
    <fullName>IsMyAccount__c</fullName>
    <formula>OR( Partner_User__c = $User.Id , OwnerId = $User.Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsMyAccount</label>
    <type>Checkbox</type>
</CustomField>